# done-but-broken-harness

./: .gitignore  LICENSE  LICENSE-docs  NOTICE  README.md  e2-claude-gap-probe-20260617-001.json  e2-codex-gap-probe-20260617-001.json  e2-qwen3.7-max-contam-screen-n13-20260620-001.json  pyproject.toml
.claude/skills/run-authored-spec-pilot/: SKILL.md
docs/: authored-spec-offline-pilot-runbook.md
examples/: emit_run_summary.py  flake_certify.py  flake_smoke.py  flake_smoke_prebaked.py  hang_watchdog.sh  real_run_deepseek_freezegun.py  real_run_deepseek_treatment.py  run_authored_spec_pilot.py  run_codex_probe.py  run_gap_probe.py  run_phase1_5.py  run_phase1_gate.py  run_subpilot.py  screen_pool.py  validate_declared_done.py
src/hit_sdd_e2/: __init__.py
src/hit_sdd_e2/_cli/: __init__.py  args.py  completion.py  dataset.py  dockerutil.py  env.py  routes.py
src/hit_sdd_e2/agent/: __init__.py  authored_spec_tools.py  codex_agent.py  container_tools.py  openhands_agent.py
src/hit_sdd_e2/authored_spec/: __init__.py  artifacts.py  authoring.py  base_validation.py  bdd_runtime.py  bundle.py  compiler.py  execution.py  gates.py  gherkin.py  manifest.py  openspec.py  pilot.py  scoring.py  surface.py  validate.py
src/hit_sdd_e2/determinism/: __init__.py  certify.py  flake.py
src/hit_sdd_e2/gate/: __init__.py  phase1.py
src/hit_sdd_e2/memorization/: __init__.py  probe.py  probe_exec.py
src/hit_sdd_e2/oracle/: __init__.py  swebench_eval.py
src/hit_sdd_e2/orchestrate/: __init__.py  phase1.py  phase1_5.py  phase1_5_analysis.py
tests/: test_analysis_empty_arm.py  test_authored_spec.py  test_authored_spec_authoring.py  test_authored_spec_base_validation.py  test_authored_spec_compiler.py  test_authored_spec_gherkin.py  test_authored_spec_openspec.py  test_authored_spec_pilot.py  test_authored_spec_surface.py  test_authored_spec_validate.py  test_cli_helpers.py  test_codex_agent.py  test_continuation_probe_boundaries.py  test_hashing_roundtrip.py  test_openhands_wiring.py  test_oracle_parsing.py  test_orchestrate_phase1.py  test_phase1_5.py  test_phase1_logic.py  test_routes.py  test_runner_mock.py  test_sanitize_script.py  test_scoring_gap.py  test_substrate_filters.py  test_valid_records.py
(+10 files in other folders)
