[project]
name = "hit-sdd-bench-e2"
version = "0.0.0"
description = "E2 brownfield acceptance-feedback ablation harness (Python/Docker). Code only; the scientific record lives in hit-sdd-bench."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
data = ["datasets"]            # substrate adapter (SWE-bench Live)
agent = ["openhands-ai>=1.8"]  # OpenHands Agent SDK scaffold

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hit_sdd_e2"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
